objects/ccpt__Topic_Event__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>ccpt__Action__c</referenceTo>
        <relationshipLabel>Topic Events</relationshipLabel>
        <relationshipName>Topic_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Topic_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Topic Event</label>
        <referenceTo>ccpt__Topic_Event__c</referenceTo>
        <relationshipLabel>Topic Events</relationshipLabel>
        <relationshipName>Topic_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Topic__c</fullName>
        <label>Topic</label>
        <referenceTo>ccpt__Topic__c</referenceTo>
        <relationshipLabel>Topic Events</relationshipLabel>
        <relationshipName>Topic_Notes_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Topic Event</label>
    <nameField>
        <label>Topic Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topic Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>